bynkc/tests/fixtures/negative/345_oidc_identity_not_string/src/demo.bynk
context demo

type Age = Int where NonNegative

actor User { auth = Oidc(issuer = "https://issuer.example", audience = "my-api", jwks = "https://issuer.example/jwks"), identity = Age }
